// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`communication/send-email/postmark SendEmail sends email with attachements 1`] = `
Ok {
  "value": Object {
    "messageId": "1cd38652-2d06-480c-ae98-b3c8f569da45",
  },
}
`;

exports[`communication/send-email/postmark SendEmail when all inputs are correct should return messageId as result 1`] = `
Ok {
  "value": Object {
    "messageId": "20fa61ec-de6e-48f6-a6f5-ffe4668509e0",
  },
}
`;

exports[`communication/send-email/postmark SendEmail when inputs are invalid should throw an exception 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"Invalid inputs\\",
  \\"detail\\": \\"Error parsing 'To': Illegal email address 'invalidemail'. It must contain the '@' symbol.\\"
}
AST Path: definitions[0].statements[2].responseHandlers[1].statements[0]
Original Map Location: Line 39, column 7",
}
`;
